# WxHCq

./: CMakeLists.txt  MFAudioPlayer.cpp  README.md  测试.xlsx
include/: mmanager.hpp  mpool.hpp  xlcall.h
lib/: MMANAGER.lib
src/: CMakeLists.txt  auxiliary.cpp  auxiliary.hpp  funcsExport.def  function.cpp  register.txt  xlcall.cpp
